Fixed header on small screens

--- a/views/whole-website.css
+++ b/views/whole-website.css
@@ -25,6 +25,7 @@ header {
     margin-bottom: 5px;
     width: 100%;
     height: 50px;
+    display: inherit;
 }
 
 #leftHeader {
